--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -14,6 +14,7 @@
 }
 
 .img-container {
+  color: black;
   position: absolute;
   width: 50%;
 }
@@ -31,22 +32,22 @@
   flex-direction: column;
   gap: 0.25rem;
 }
+
 .profile > :nth-child(1) {
-  color: var(--black);
+  color: var(--primary-color);
+  padding: 0;
   font-weight: bold;
-  font-size: 2.5rem;
+  font-size: 1.8rem;
 }
 .profile > :nth-child(2) {
-  color: #fb5635;
-  font-weight: bold;
-  font-size: 3.5rem;
-}
-.profile > :nth-child(3) {
-  font-weight: 100;
-  font-size: 1rem;
   color: var(--gray);
+}
+.profile > :nth-child(2) span {
+  font-weight: 100;
+  font-size: 1.7rem;
   margin-top: 10px;
 }
+
 .i-button {
   width: 6rem;
   height: 2rem;
