--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@
   border: 2px solid var(--primary-color);
   font-size: 16px;
   padding: 11px 26px 11px 26px;
-  color: gray;
+  color: var(--primary-color);
   font-weight: bold;
 }
 
