--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -4,15 +4,6 @@
   margin-top: 3.5rem;
 }
 
-.profile img {
-  margin-right: auto;
-  margin-left: auto;
-  width: 77%;
-  border-radius: 50%;
-  object-fit: fill;
-  overflow: hidden;
-}
-
 .img-container {
   color: black;
   position: absolute;
@@ -80,6 +71,19 @@
   filter: blur(72px);
 }
 
+div .avatar {
+  display: flex;
+  justify-content: center;
+}
+
+div .avatar img {
+  object-fit: fill;
+  border-radius: 50%;
+  border: 4px solid rgba(0, 0, 0, 0);
+}
+div .avatar img:hover {
+  border: 4px solid rgba(255, 255, 255, 0.1);
+}
 @media screen and (max-width: 600px) {
   .Hero {
     flex-direction: column;
