--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -77,6 +77,7 @@ div .avatar {
 }
 
 div .avatar img {
+  width: 77%;
   object-fit: fill;
   border-radius: 50%;
   border: 4px solid rgba(0, 0, 0, 0);
