--- a/src/App.css
+++ b/src/App.css
@@ -15,25 +15,36 @@
   --smboxShadow: -79px 51px 60px rgba(0, 0, 0, 0.08);
 }
 
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background: var(--background-light-color);
+}
+
 .App {
+  height: 100vh;
   padding: 1.5rem 18%;
-  overflow: hidden;
-  color: var(--black);
   background-color: var(--background-light-color);
 }
 
 .button {
+  position: relative;
   background-color: var(--background-light-color);
   border: 2px solid var(--primary-color);
   font-size: 16px;
   padding: 11px 26px 11px 26px;
   color: var(--primary-color);
   font-weight: bold;
+  cursor: pointer;
+  z-index: 50;
 }
 
-.button:hover {
-  background: --background-dark-color;
-  cursor: pointer;
+.button :hover {
   border: 2px solid var(--background-dark-color);
   color: var(--background-dark-color);
 }
