--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -7,7 +7,7 @@
 .blob-container {
   color: black;
   position: absolute;
-  width: 50%;
+  width: 10rem;
 }
 
 .profile .content {
@@ -90,6 +90,9 @@ div .avatar img:hover {
 .content .icons {
   display: none;
 }
+.button a {
+  text-decoration: none;
+}
 
 @media screen and (min-width: 601px) {
   .profile {
@@ -121,5 +124,11 @@ div .avatar img:hover {
 
   .profile {
     width: 100%;
+  }
+}
+
+@media screen and (min-width: 1536px) {
+  .Hero {
+    margin-top: 5.5rem;
   }
 }
