--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,10 +1,14 @@
 .footer {
   display: flex;
   align-items: center;
-  margin: -0.5rem -3.5rem;
+
   position: relative;
   margin-top: -7rem;
+  background-color: var(--primary-color) !important;
+  width: 100%;
+  height: 8rem;
 }
+
 .f-content {
   position: absolute;
   display: flex;
@@ -21,8 +25,8 @@
   gap: 2rem;
 }
 
-@media screen and (max-width: 480px){
-  .f-content{
-    transform: scale(.5);
+@media screen and (max-width: 480px) {
+  .f-content {
+    transform: scale(0.5);
   }
 }
